[package]
name = "censor-analyser"
version = "0.4.2"
authors = ["Quickmarble"]
repository = "https://github.com/Quickmarble/censor"
description = "Palette analysis tool"
categories = ["command-line-utilities", "multimedia::images", "visualization"]
keywords = ["color", "colour", "palette", "tool"]
license = "MIT"
readme = "README.md"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "censor"
path = "src/main.rs"

[dependencies]
json = "0.12.4"
const_format = "0.2.17"
escape_string = "0.1.1"
clap = "2.33.3"
image = "0.23.14"
directories = "3.0.2"
serde = { version = "1.0.127", features = ["derive"] }
bincode = "1.3.3"
img-parts = "0.2.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ureq = "2.1.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
stdweb = "0.4.20"
console_error_panic_hook = "0.1.6"
hex = "0.4.3"
